syntax = "proto3";
package cosmos.tx.v1beta1;

import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";

message TxRaw {
  bytes body_bytes = 1;
  bytes auth_info_bytes = 2;
  repeated bytes signatures = 3;
}

message TxBody {
  repeated google.protobuf.Any messages = 1;
  string memo = 2;
  uint64 timeout_height = 3;
  repeated bytes extension_options = 1023;
  repeated bytes non_critical_extension_options = 2047;
}

message AuthInfo {
  repeated SignerInfo signer_infos = 1;
  Fee fee = 2;
}

message SignerInfo {
  google.protobuf.Any public_key = 1;
  ModeInfo mode_info = 2;
  uint64 sequence = 3;
}

message ModeInfo {
  message Single {
    uint32 mode = 1;
  }
  Single single = 1;
}

message Fee {
  repeated cosmos.base.v1beta1.Coin amount = 1;
  uint64 gas_limit = 2;
  string payer = 3;
  string granter = 4;
}

message SignDoc {
  bytes  body_bytes = 1;
  bytes  auth_info_bytes = 2;
  string chain_id = 3;
  uint64 account_number = 4;
}